bpo-36737: Use the module state C-API for warnings. (gh-13159)